p2/force-app/main/default/objects/Time_Sheets__c/fields/Friday_Date__c.field-meta.xml
<CustomField>
    <fullName>Friday_Date__c</fullName>
    <label>Friday Date</label>
    <type>Date</type>
</CustomField>