p2/force-app/main/default/objects/Time_Sheets__c/fields/Friday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_In__c</fullName>
    <label>Friday Time In</label>
    <type>Time</type>
</CustomField>