p2/force-app/main/default/objects/Time_Sheets__c/fields/Friday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_Out__c</fullName>
    <label>Friday Time Out</label>
    <type>Time</type>
</CustomField>