p2/force-app/main/default/objects/Time_Sheets__c/fields/Monday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_In__c</fullName>
    <label>Monday Time In</label>
    <type>Time</type>
</CustomField>