p2/force-app/main/default/objects/Time_Sheets__c/fields/Monday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_Out__c</fullName>
    <label>Monday Time Out</label>
    <type>Time</type>
</CustomField>