p2/force-app/main/default/objects/Time_Sheets__c/fields/PTO_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>PTO_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PTO Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>