p2/force-app/main/default/objects/Time_Sheets__c/fields/PTO_Date_Back__c.field-meta.xml
<CustomField>
    <fullName>PTO_Date_Back__c</fullName>
    <label>PTO Date Back</label>
    <type>Date</type>
</CustomField>