p2/force-app/main/default/objects/Time_Sheets__c/fields/PTO_Date_Out__c.field-meta.xml
<CustomField>
    <fullName>PTO_Date_Out__c</fullName>
    <label>PTO Date Out</label>
    <type>Date</type>
</CustomField>