p2/force-app/main/default/objects/Time_Sheets__c/fields/PTO_Type__c.field-meta.xml
<CustomField>
    <fullName>PTO_Type__c</fullName>
    <label>PTO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PTO_Type</valueSetName>
    </valueSet>
</CustomField>