p2/force-app/main/default/objects/Time_Sheets__c/fields/Saturday_Date__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Date__c</fullName>
    <label>Saturday Date</label>
    <type>Date</type>
</CustomField>