p2/force-app/main/default/objects/Time_Sheets__c/fields/Saturday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Time_Out__c</fullName>
    <label>Saturday Time Out</label>
    <type>Time</type>
</CustomField>