p2/force-app/main/default/objects/Time_Sheets__c/fields/Sunday_Date__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Date__c</fullName>
    <label>Sunday Date</label>
    <type>Date</type>
</CustomField>