p2/force-app/main/default/objects/Time_Sheets__c/fields/Sunday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_In__c</fullName>
    <label>Sunday Time In</label>
    <type>Time</type>
</CustomField>