p2/force-app/main/default/objects/Time_Sheets__c/fields/Sunday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_Out__c</fullName>
    <label>Sunday Time Out</label>
    <type>Time</type>
</CustomField>