p2/force-app/main/default/objects/Time_Sheets__c/fields/Thursday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_In__c</fullName>
    <label>Thursday Time In</label>
    <type>Time</type>
</CustomField>