p2/force-app/main/default/objects/Time_Sheets__c/fields/Thursday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_Out__c</fullName>
    <label>Thursday Time Out</label>
    <type>Time</type>
</CustomField>