p2/force-app/main/default/objects/Time_Sheets__c/fields/Tuesday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_In__c</fullName>
    <label>Tuesday Time In</label>
    <type>Time</type>
</CustomField>