p2/force-app/main/default/objects/Time_Sheets__c/fields/Tuesday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_Out__c</fullName>
    <label>Tuesday Time Out</label>
    <type>Time</type>
</CustomField>