p2/force-app/main/default/objects/Time_Sheets__c/fields/Wednesday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_In__c</fullName>
    <label>Wednesday Time In</label>
    <type>Time</type>
</CustomField>